# bjtu-wgpu-renderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
ext/glfw/: CMakeLists.txt
ext/glfw3webgpu/: CMakeLists.txt
ext/webgpu/: webgpu.cmake
src/: application.cpp  application.h  main.cpp  utils.cpp  utils.h  webgpu-raii.hpp
